tests/diagnostics/naming/casing/type_not_pascal/expect.txt
# exit: 1
input/main.lang0:1:1: error: type name must be PascalCase
  userProfile :: struct {
  ^
